<resources>
    <string name="app_name">Catalog3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="adauga_clasa">Adauga clasa</string>
    <string name="adauga_materie">Adauga materie</string>
    <string name="adauga_materie_ny">Adauga toate materiile din acest an</string>
    <string name="adauga_elev">Adauga elev</string>
    <string name="adauga_nota">Nota</string>
    <string name="adauga_absenta">Absenta</string>
    <string name="trimite_anunt">Trimite anunt</string>
    <string name="adauga_sms_gateway_title">SMSGateway</string>
    <string name="adauga_sms_alt_phone_title">Trimite SMS de pe alt telefon</string>
    <string name="motiveaza_absenta">Motiveaza absenta</string>
    <string name="anuleaza_absenta">Anuleaza absenta</string>
    <string name="numele_clasei">Numele clasei - ex: 9B</string>
    <string name="numele_clasei_new_year">Numele clasei - ex: 9B va deveni 10B</string>
    <string name="numele_institute">Numele unitatii scolare</string>
    <string name="numele_materiei">Numele materiei</string>
    <string name="numele_elevului">Numele elevului</string>
    <string name="introdu_nota">Introdu nota</string>
    <string name="absenta_mesaj">Esti sigur ca vrei sa adaugi o absenta? Notificarea se va trimite in 15 minute catre parinte. Poti anula absenta in sectiunea de detalii ale elevului</string>
    <string name="anunt_mesaj">O notificare se va trimite catre fiecare parinte al acestei clase. Esti sigur ca vrei sa trimiti anuntul?</string>
    <string name="adauga_sms_gateway">Adauga numarul de telefon al SMSGateway-ului pe care vrei sa il folosesti:</string>
    <string name="adauga_sms_gateway2">Acest device va fi setat ca SMS Gateway(SMS-urile vor fi trimise de pe acest device). Introdu numarul de telfon al acestui device: </string>
    <string name="absenta_motiveaza_mesaj">Esti sigur ca vrei sa motivezi absenta?</string>
    <string name="cancel_motiveaza_mesaj">Doresti sa anulezi absenta?</string>
    <string name="continua">Continua</string>
    <string name="title_activity_wizard_add">WizardAddActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_elev_list">Elevi</string>
    <string name="title_elev_detail">Elev Detail</string>
    <string name="nr_tel">Numar de telefon</string>
    <string name="code_elev">Cod elev</string>
    <string name="nr_cod">AA1234</string>
    <string name="nume">Nume</string>
    <string name="note">Note:</string>
    <string name="media">Media:</string>
    <string name="absente">Absente:</string>
    <string name="mesaje">Mesaje:</string>
    <string name="renunta">Renunta</string>
    <string name="absenta_motivata">Absenta motivata</string>
    <string name="absenta_nemotivata">Absenta nemotivata</string>
    <string name="trimite_alt_phone">Trimite SMS-uri de pe alt telefon</string>
    <string name="cadru_didactic">Cadru didactic</string>
    <string name="parinte">Parinte</string>
    <string name="mod">Alege in ce mod vrei sa folosesti aplicatia:</string>
    <string name="sign_in">Sign in</string>
    <string name="not_yet">Inca nu ai un cont?</string>
    <string name="creeaza">Creeaza unul!</string>
    <string name="hint_inst">Introdu numele institutiei scolare</string>
    <string name="hint_phone">Introdu numarul de telefon</string>
    <string name="error_login">Logare nereusita</string>
    <string name="empty_list">Nu aveti nici o clasa adaugata</string>
    <string name="alege_clasa">Alege/adauga clasa</string>
    <string name="situatie_clasa">Situatie clasa</string>
    <string name="setari">Setari</string>
    <string name="situatie_gen">Situatie generala</string>
    <string name="inapoi">Inapoi</string>
    <string name="confirma">Confirma</string>
    <string name="no_notes">Nici o nota</string>
    <string name="no_abs">Nici o absenta</string>
    <string name="motivata">Motivata</string>
    <string name="nemotivata">Nemotivata</string>
    <string name="nemotivate">Motivate</string>
    <string name="motivate">Nemotivate</string>
    <string name="trimite_mesaj">Trimite un mesaj profesorului</string>
    <string name="trimite_mesaj_client">Trimite un mesaj parintelui</string>
    <string name="trimite_anunt_client">Trimite un anunt parintilor clasei</string>
    <string name="scrie_mesaj">Scrie un mesaj profesorului</string>
    <string name="scrie_mesaj_empty">Mesajul este gol!</string>
    <string name="trimite">Trimite</string>
    <string name="configureaza">Configureaza</string>
    <string name="situatia_abs">Situatia absentelor</string>
    <string name="performante">Performante</string>
    <string name="refresh">Refresh</string>
    <string name="performante_bune">Cele mai bune performante</string>
    <string name="performante_slabe">Cele mai slabe performante</string>
    <string name="recomanda_facultate">Recomanda o facultate</string>
    <string name="media_generala">Media generala</string>
    <string name="limita_absenta">Limita absente depasita</string>
    <string name="medie_low">Pericol corigenta</string>
    <string name="note_doua">Elevul inca nu are 2 note</string>
    <string name="note_una">Elevul inca nu are note</string>
    <string name="limita_abs_materie">Limita de absente nemotivate depasita la materia</string>
    <string name="medie_sub">Pericol corigenta la materia</string>
    <string name="siyuatie_gen">Situatie generala</string>
    <string name="materii">Materii</string>
    <string name="medii_generale">Medii generale</string>
    <string name="abs_nemot">Absente nemotivate</string>
    <string name="teza_materie">Materia contine teza? Tap pe casuta din stanga daca este nevoie de nota in teza</string>
    <string name="teza_nota">Nota in teza?</string>
    <string name="editeaza_nr_tel">Editeaza numarul de telefon</string>
    <string name="in_asteptare">In asteptare...</string>
    <string name="abs_trimisa">Trimisa</string>
    <string name="mess">Mesaje</string>
    <string name="de_la_parinte">De la parintele elevului:</string>
    <string name="de_la_profesor">De la profesorul de:</string>
    <string name="pentru_parinte">Pentru parintele elevului:</string>
    <string name="pentru_profesor">Pentru profesorul de:</string>
    <string name="de_la_diriginte">De la diriginte</string>
    <string name="pentru_all">Pentru toti parintii clasei</string>
    <string name="no_notifications">Nici o notificare</string>
    <string name="alege_semestru">Alege semestrul curent:</string>
    <string name="din_pana">Din %s pana in %s</string>


</resources>
