<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/situatie_generala"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/situatie_gen" />
        <item
            android:id="@+id/situatie_absente"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/situatia_abs" />
        <item
            android:id="@+id/performante"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/performante" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/setari"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/setari" />
        </menu>
    </item>

</menu>
