<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/materii" />
        <item
            android:id="@+id/situatie_generala"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/situatie_clasa" />
    <!--    <item
            android:id="@+id/alege_clasa"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/alege_clasa" />-->
        <item
            android:id="@+id/mesaje"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/mess" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/setari"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/setari" />
        </menu>
    </item>

</menu>
