<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tabla"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:scaleType="centerCrop">

    <TextView
        android:id="@+id/gateway_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SMS GATWAY ACTIVE"
        android:textColor="@color/white"
        android:padding="20dp"
        android:layout_gravity="center"
        android:alpha="0.7"
        android:textSize="20sp"
        android:visibility="gone"/>

    <LinearLayout android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod"
            android:textColor="@color/white"
            android:padding="20dp"
            android:gravity="center"
            android:alpha="0.7"
            android:textSize="20sp"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/cadru_didactic"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            fancy:fb_borderColor="@color/fancy1"
            fancy:fb_defaultColor="@color/fancy2"
            fancy:fb_focusColor="@color/fancy3"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/cadru_didactic"
            fancy:fb_textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            fancy:fb_textColor="@color/fancy1"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/parinte"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            fancy:fb_borderColor="@color/fancy1"
            fancy:fb_defaultColor="@color/fancy2"
            fancy:fb_focusColor="@color/fancy3"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/parinte"
            fancy:fb_textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            fancy:fb_textColor="@color/fancy1"/>

    </LinearLayout>

</LinearLayout>