<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout xmlns:fancy="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tabla"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:scaleType="centerCrop">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/sign_in"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            fancy:fb_borderColor="@color/fancy1"
            fancy:fb_defaultColor="@color/fancy2"
            fancy:fb_focusColor="@color/fancy3"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/sign_in"
            fancy:fb_textColor="@color/fancy1"
            fancy:fb_textSize="17sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:text="@string/not_yet"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/creeaza_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:alpha="0.7"
                android:text="@string/creeaza"
                android:textColor="@color/fancy3"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/black"
        android:visibility="gone"
        android:alpha="0.3">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
</RelativeLayout>