<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schema s.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tabla">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fancy="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/materie_nume"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="Istorie"
                android:fontFamily="@font/eraserregular"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/materie_nume"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/usrusr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:background="#0000"
                        android:gravity="start"
                        android:maxLength="12"
                        android:padding="16dp"
                        android:text="@string/nume"
                        android:textColor="#a2a1b8"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/elev_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="#0000"
                        android:gravity="end"
                        android:padding="16dp"
                        android:textColor="#a2a1b8"
                        android:textColorHint="#181737"
                        android:textSize="20sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dad8d8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/employee_job_title_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:background="#0000"
                        android:gravity="start"
                        android:maxLength="12"
                        android:padding="16dp"
                        android:text="@string/nr_tel"
                        android:textColor="#a2a1b8"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/elev_nr_tel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="#0000"
                        android:gravity="end"
                        android:padding="16dp"
                        android:textColor="#a2a1b8"
                        android:textColorHint="#1b193b"
                        android:textSize="20sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dad8d8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/elev_code_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:background="#0000"
                        android:gravity="start"
                        android:maxLength="12"
                        android:padding="16dp"
                        android:text="@string/code_elev"
                        android:textColor="#a2a1b8"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/code_elev"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="#0000"
                        android:gravity="end"
                        android:padding="16dp"
                        android:textColor="#a2a1b8"
                        android:textColorHint="#1b193b"
                        android:textSize="20sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dad8d8" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/distance_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:gravity="start"
                        android:padding="16dp"
                        android:text="@string/media"
                        android:textColor="#a2a1b8"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/medie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:gravity="end"
                        android:maxLength="12"
                        android:padding="16dp"
                        android:text="9.5"
                        android:textColor="@color/colorAccent"
                        android:textSize="16dp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/sep1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/linear"
                android:background="#dad8d8" />

            <LinearLayout
                android:id="@+id/schedule_text_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/sep1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/schedule_text"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="35dp"
                        android:layout_marginStart="16dp"
                        android:background="#0000"
                        android:gravity="start|bottom"
                        android:text="@string/note"
                        android:textColor="#a2a1b8"
                        android:textSize="16sp" />

                    <mehdi.sakout.fancybuttons.FancyButton
                        android:id="@+id/adauga_nota_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_weight="0.3"
                        android:textSize="14dp"
                        android:layout_marginEnd="10dp"
                        fancy:fb_borderColor="@color/fancy1"
                        android:layout_marginTop="5dp"
                        fancy:fb_defaultColor="@color/fancy2"
                        fancy:fb_focusColor="@color/fancy3"
                        fancy:fb_radius="30dp"
                        fancy:fb_text="@string/adauga_nota"
                        fancy:fb_textColor="@color/fancy1"
                        fancy:fb_textSize="17sp" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/arrowImage"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:src="@drawable/iconfinder_arrow_down" />
            </LinearLayout>

            <View
                android:id="@+id/sep2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/schedule_text_layout"
                android:background="#dad8d8" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/noteRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/schedule_text_layout"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/comment_text_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/noteRV"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/comment_text"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="16dp"
                        android:layout_weight="0.7"
                        android:background="#0000"
                        android:gravity="start|bottom"
                        android:text="@string/absente"
                        android:textColor="#a2a1b8"
                        android:textSize="16sp" />

                    <mehdi.sakout.fancybuttons.FancyButton
                        android:id="@+id/adauga_absenta_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_weight="0.3"
                        android:textSize="14dp"
                        android:layout_marginEnd="10dp"
                        fancy:fb_borderColor="@color/fancy1"
                        android:layout_marginTop="5dp"
                        fancy:fb_defaultColor="@color/fancy2"
                        fancy:fb_focusColor="@color/fancy3"
                        fancy:fb_radius="30dp"
                        fancy:fb_text="@string/adauga_absenta"
                        fancy:fb_textColor="@color/fancy1"
                        fancy:fb_textSize="17sp" />
                </LinearLayout>


                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/arrowImage2"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:src="@drawable/iconfinder_arrow_down" />
            </LinearLayout>

            <View
                android:id="@+id/sep3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/comment_text_layout"
                android:background="#dad8d8" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/absRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/comment_text_layout"
                android:visibility="gone" />

            <TextView
                android:id="@+id/mesaje_text"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_below="@+id/absRV"
                android:layout_marginStart="16dp"
                android:background="#0000"
                android:gravity="start|bottom"
                android:text="@string/mesaje"
                android:textColor="#a2a1b8"
                android:textSize="16sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mesajeRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mesaje_text"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:id="@+id/layout_chatbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mesajeRV"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/send_edittext"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.8"
                    android:alpha="0.5"
                    android:background="@drawable/rounded_edittext"
                    android:gravity="center"
                    android:hint="@string/trimite_mesaj_client" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/button_chatbox_send"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textSize="14dp"
                    android:visibility="gone"
                    fancy:fb_borderColor="@color/fancy1"
                    fancy:fb_defaultColor="@color/fancy2"
                    fancy:fb_focusColor="@color/fancy3"
                    fancy:fb_radius="30dp"
                    fancy:fb_text="@string/trimite"
                    fancy:fb_textColor="@color/fancy1"
                    fancy:fb_textSize="17sp" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</FrameLayout>

